--- a/events-practise/styles.css
+++ b/events-practise/styles.css
@@ -2,6 +2,46 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 15px;
+}
+
+.btn {
+  padding: 10px 24px;
+  color: black;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  transition: transform 250ms linear;
+}
+
+.btn:hover,
+.btn:focus {
+  transform: scale(1.05);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+form > .input {
+  height: 40px;
+  color: black;
+  border: 1px solid #cccccc;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.btn:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
 }
